text-align center fix

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ html, body {
     text-decoration: none;
     max-width: 864px;
     max-height: 287.928px;
+    text-align: center;
 }
 
 #content-container2{
@@ -137,6 +138,7 @@ html, body {
     text-decoration: none;
     max-width: 864px;
     max-height: 287.928px;
+    text-align: center;
 }
 
 #content-container3{
@@ -150,6 +152,7 @@ html, body {
     text-decoration: none;
     max-width: 864px;
     max-height: 287.928px;
+    text-align: center;
 }
 
 #content-container4{
@@ -163,6 +166,7 @@ html, body {
     text-decoration: none;
     max-width: 864px;
     max-height: 287.928px;
+    text-align: center;
 }
 
 #content-container5{
@@ -176,6 +180,7 @@ html, body {
     text-decoration: none;
     max-width: 864px;
     max-height: 287.928px;
+    text-align: center;
 }
 
 
